an almost coherent outline for intro

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -75,30 +75,52 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
  <!-- What is the theoretic meaning of the series study? -->
 # Introduction
+[sentences in bracket are key ideas]
 
-Morality is the central of human social life. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of social cognition [@goodwin_moral_2014; goodwin_moral_2015; @abele_navigating_2020]. When judging a person, based on face or other information, the evaluation of the moral character is fast and without much effort []. Also, moral character is the most defining trait to judge whether a person is him/herself as before, i.e, the continuity of identity [].
+[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of social cognition [@goodwin_moral_2014; goodwin_moral_2015; @abele_navigating_2020]. When judging a person, based on face or other information, the evaluation of the moral character is fast and without much effort [e.g., @willis_first_2006]. Also, moral character is the most defining trait to judge whether a person is him/herself as before, i.e, the continuity of identity [].
 
-The importance of morality in person perception goes two ways for an individuals: She needs to both accurately evaluate whether other people are moral and (2) to behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was usually studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others [] and evaluating the continuity of identity others. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions. 
+[The importance of moral character in person perception goes two ways for an individual]: She needs to both accurately evaluate whether other people are moral and behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others [] and evaluating the change of identity of others. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions. 
 
-When it comes to self perception, there is also accumulating evidence that individual studied has motivation to maintain a good moral-self concept. For example, there exists a significant self-enhancement effect in morality, which is stronger than self-enhancement effect in other domains, such as competence or social competence [@tappin_illusion_2017]. Also, participants try to maintain their moral self image even after their own unethical behaviors (e.g., cheating)[]. similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things []. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+When it comes to self perception, there is also accumulating evidence that people have motivation to maintain a good moral-self concept. For example, there exists a significant self-enhancement effect in morality, which is stronger than self-enhancement effect in other domains, such as competence or social competence [@tappin_illusion_2017]. Also, participants try to maintain their moral self image even after their own unethical behaviors (e.g., cheating)[]. similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things []. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-Yet, as @freeman_dynamic_2011 put it, the focus of these models and studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, the perceptual decision-making process of moral related information (about self and others) were less studied. Without knowledge of these processes, we can not have a full picture of how moral information is prioritized in our cognition. Recently, there is a increasingly larger body of literature revealed that perception is strongly influenced by social factors, such as group-categorization, stereotype [@xiao_perceiving_2016]. Given the importance of moral character, one might expect that moral related information can also bias cognitive processes, such as attention, perception, and learning and memory. Indeed, previous studies have found that moral related words more likely to pop-out [@gantman_moral_2014, but see @], and are easier to be remembered [@stanley_moral_2019]. When it comes to moral character, studies also revealed that memories retrieved are biased by their relevance to moral self-image and that this effect is modulated by the motivation of maintaining a positive moral self-image [@carlson_motivated_2020]. 
+[whether moral character information started to influence our perception is unknown, exp1a, b, c, and exp2] Yet, as @freeman_dynamic_2011 put it, the focus of the previous studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, the perceptual decision-making process of moral related information (about self and others) were less studied. Without knowledge of these processes work, we can not have a full picture of how moral information is processed in our cognition. Recently, there is a increasingly larger body of literature revealed that perception is strongly influenced by social factors, such as group-categorization, stereotype [@xiao_perceiving_2016]. Given the importance of moral character, one might expect that moral character related information can also bias cognitive processes, such as attention, perception, and learning and memory. Indeed, previous studies have found that moral related words more likely to pop-out [@gantman_moral_2014, but see @], and are easier to be remembered [@stanley_moral_2019]. When it comes to moral character, studies also revealed that memories retrieval are biased by their relevance to moral self-image and that this effect is modulated by the motivation of maintaining a positive moral self-image [@carlson_motivated_2020]. 
 
-However, the lower-level perceptual process of moral character related information, which is the mechanism that produced those social cognitive phenomena, is still unknown. There are a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is only part of the morality [Haidt 2007]. Given that that moral character is a high-level and hidden state instead of observable feature, one ways to study the perceptual process of moral character is using concrete moral behaviors. That is, we assume that moral character has impact on perceptual decision-making if we observed how different moral behaviors influence the perceptual process. Previous studies in moral judgement has used different moral behaviors and other ecologically valid stimuli (e.g., face, or vignettes). Recent memory tasks also used those stimuli [], however, the idiosyncratic and heterogeneity of those stimuli might introduce large noise in perceptual tasks. 
+[using associative learning task to study the moral character's influence on perception] However, the lower-level perceptual process of moral character related information, which is the mechanism that produced those social cognitive phenomena, is still unknown. There are a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is only part of the morality [Haidt 2007]. Given that that moral character is a high-level and hidden state instead of observable feature, one ways to study the perceptual process of moral character is using concrete moral behaviors. That is, we infer that moral character impact perceptual decision-making if we observed how different moral behaviors influence the perceptual process. Previous studies in moral judgement has used different moral behaviors and other ecologically valid stimuli (e.g., face, or vignettes). Recent memory tasks also used those stimuli [], however, the idiosyncratic and heterogeneity of those stimuli might introduce large noise when it comes to perceptual process. 
 
-An alternative might be using abstract concepts in language to study how these concepts influence perception. After all, abstract concept about moral character is part of our world and it can be used to identify useful constructs in social life []. For example, .... Therefore, It is possible to use abstract or semantic stimuli to study the perceptual process of moral character. As recent theoretical frameworks suggested, different levels of information formed a dynamic network in human brain and stimuli cue can activate more abstract, non-observable personal traits [e.g., @freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., a good person) is activated, it should also be able to have influence on perceptual process (e.g., visual cues) directly, especially when the perceptual decision-making is directly related to the concept-cue association. In this case, abstract concepts of moral character may like signal of moral reputation (for others) or moral self-concept []. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014]. If moral character information is an important social cue, then, as those other social cues listed above, moral character related information might be prioritized in perceptual processing. Here, we use the associative learning paradigm to study the moral character. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person, participants first learn the association between shapes and words, i.e., buid direct link between high-level, hidden moral character and visual cue (e.g., Freeman). After they remembered the association, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used intensively in studying the self-concept, but not so much in studying moral character. 
+An alternative might be using abstract concepts in language to study how these concepts influence perception. After all, abstract concept about moral character is part of our daily life and it can be used to identify useful constructs in social life []. For example, .... Therefore, It is possible to use abstract or semantic stimuli to study the perceptual process of moral character. As recent theoretical frameworks suggested, different levels of information formed a dynamic network in human brain and visual cues can activate more abstract, non-observable personal traits (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., a good person) is activated, it should also be able to have influence on perceptual process of the visual cues directly, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014]. If moral character information is an important social cue, then, as those other social cues (facial feature, clothing, etc), moral character related information might be prioritized in perceptual processing.
 
-The first question is, whether the moral words used the in paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would predict this influence. The self-tagging paradigm might be able to studies this effect. To validate the the influence is the moral meaning, we also used four experiments to explore and validate the paradigm. All of these four experiment showed similar patterns. 
+Here, we use an associative learning paradigm to study the moral character. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the association between shapes and words, i.e., buid direct link between high-level, hidden moral character and visual cue. After they remembered the association, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but haven't been used in studying moral character. 
 
-If the paradigm is valid, then how to explain the emerging pattern in the results? Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli []. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivist hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners, which will bring future reward. A third possibility is that both negative and positive is faster than neutral because of the valence. 
+The first question is, whether the moral words used the in paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would predict this influence. The self associative learning paradigm might be able to studies this effect. To validate the the influence is indeed by the moral meaning of the words, we used four experiments to explore and validate the paradigm. All of these four experiment showed a robust effect of moral content. 
 
-As we found a positivity effect, which is contradict with negativity effect reported by previous studies [@gantman_2012, @anderson_2011], we didn't have clear explanation why positive stimuli is different from the neutral while the negative condition is not distinguishable from neutral. One potential explanation is reward related framework, which suggested that positive are rewarding to self, e.g., potential collaboration. This focus on the value of the other person. Another possible explanation is related to the self-categorization or multiple identity theory, which proposed that people categorize people as in-group and out-group[]. Previous studies found that in-group were prioritized in the self-tagging paradigm []. Therefore, it's possible that participants identify with good-person as "in-group", while exclude the neutral and bad moral characters as out-group. This social categorization theory also related to self, i.e., in-group is an expanded self. 
+[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli []. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivist hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. A third possibility is that both negative and positive is faster than neutral because of the valence. The underlying of the valence assumption is that the stimuli presented in the associative task (word-shape pair) can elicit approaching-avoiding motivation. This probability of this assumption is true is low, because the all these stimuli do not have visual cue that really threatening or rewarding. Therefore, the difference in perceptual decision-making make reflect the value of the words to participants, which can be the interaction of the meaning of the words and the participants' idiosyncratic characteristics. 
 
-Though these two framework has similar prediction for the studies with moral character such as "good-person", "neutral person", and "bad person", they have different prediction when we have orthogonal design with identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the self-expanding theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+Previous research converged that, if an object to be of value to an individual, then that object must be judged as relevant to that individual, i.e., self-relevance [@juechems_where_2019; @reicher_perception_2016]. There are two possible way an external stimuli be valuable (relevant) for an individual. First, we might evaluate its rewarding-threatening value, as many previous perceptual research had done. Second, we may apply social categorization when the stimuli is a person, i.e., we categorize whether the person is in the same group as we do. As we only found a positivity effect when using moral characters as stimuli. Moreover, there are evidence for both reward [@Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization in the self-tagging paradigm. Thus, we can not distinguish those two different way of self-relevance. 
 
-The second framework is self-categorization theory, which states that self-relatedness or self-relevance. Under this framework, .....
+[Distinguish two explanations by make self salient, and found relative adv of self: exp3a, 3b, 6b] Though these two framework has similar prediction for the studies with moral character such as "good-person", "neutral person", and "bad person", they have different prediction when if the experiment design include both identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the self-expanding theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+
+Using exp 3a and 3b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute.
+
+[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we need to zoom in on the categorization: self is the anchor or good is the anchor? self is the anchor, then, id (self) has stronger influence on moral character (good-person) than moral character has on id. In other words, when identity is ambiguous, people categorize good person as self, when moral valence is ambiguous, people are less affected. i.e., for exp 4a (id is clear, valence is ambiguous), the valence effect (good self vs neutral self) is weaker than the id effect of id (good self vs good other) in exp 4b (valence is clear, id is ambiguous).
+
+[whether categorize self as positive is not limited to morality, but other traits, yet not state] Self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
+
+[Self-bad as an index of self-reported self-categorization in moral term]
+
+
+Still need to thinking about the relationship between several key concepts: self-categorization, morality (moral character), perceptual decision-making, interactive dynamic theory.
 
 As previous studies in social psychology and cognitive psychology found the perceiving self and perceiving others has huge difference, therefore, a question immediately followed is, how the self- and other-related moral character information are processed in perceptual decision-making. To investigate this phenomenon, we included both self- and other-related moral character information in the self-tagging paradigm. abstract moral concepts are prioritized in perceptual decision-making? There are several possible predictions. 
+
+*Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. 
+*Personal identity* refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
+*Social identity* refers to the shared social categorical self ("us" vs. "them").
+
+*variable self*: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as ‘other’ or as part of the extended 'we' self) is different in different settings. 
+
+variable self and morality in perception. self is variable, morality is basic, the point is: how moral other is perceive as extension of self, not reverse.
+
+categorization based on morality and variable self/identity
 
 However, the above prediction was based on vague theory that are not strongly linked with the prediction []. To make stronger theoretical prediction, we listed our implicit assumptions of our prediction.
 
