--- a/endnote.bib
+++ b/endnote.bib
@@ -22,7 +22,6 @@
    type = {Journal Article}
 }
 
-
 ﻿@article{Liu_2020_JOPD,
    author = {Liu, Qinglan and Wang, Fei and Yan, Wenjin and Peng, Kaiping and Sui, Jie and Hu, Chuan-Peng},
    title = {Questionnaire Data from the Revision of a Chinese Version of Free Will and Determinism Plus Scale},
@@ -893,8 +892,57 @@ Negative gossip about a person renders that person’s face more visible to the 
 	author = {Carlson, Ryan W. and Maréchal, Michel André and Oud, Bastiaan and Fehr, Ernst and Crockett, Molly J.},
 	urldate = {2020-07-21},
 	date = {2020-04-29},
+	langid = {english}
+}
+
+
+@article{willis_first_2006,
+	title = {First Impressions: Making Up Your Mind After a 100-Ms Exposure to a Face},
+	volume = {17},
+	issn = {0956-7976},
+	url = {https://doi.org/10.1111/j.1467-9280.2006.01750.x},
+	doi = {10.1111/j.1467-9280.2006.01750.x},
+	shorttitle = {First Impressions},
+	abstract = {People often draw trait inferences from the facial appearance of other people. We investigated the minimal conditions under which people make such inferences. In five experiments, each focusing on a specific trait judgment, we manipulated the exposure time of unfamiliar faces. Judgments made after a 100-ms exposure correlated highly with judgments made in the absence of time constraints, suggesting that this exposure time was sufficient for participants to form an impression. In fact, for all judgments—attractiveness, likeability, trustworthiness, competence, and aggressiveness—increased exposure time did not significantly increase the correlations. When exposure time increased from 100 to 500 ms, participants' judgments became more negative, response times for judgments decreased, and confidence in judgments increased. When exposure time increased from 500 to 1,000 ms, trait judgments and response times did not change significantly (with one exception), but confidence increased for some of the judgments; this result suggests that additional time may simply boost confidence in judgments. However, increased exposure time led to more differentiated person impressions.},
+	pages = {592--598},
+	number = {7},
+	journaltitle = {Psychological Science},
+	shortjournal = {Psychol Sci},
+	author = {Willis, Janine and Todorov, Alexander},
+	urldate = {2020-10-18},
+	date = {2006-07-01},
+	langid = {english}
+}
+
+@article{reicher_perception_2016,
+	title = {Perception, Action, and the Social Dynamics of the Variable Self},
+	volume = {27},
+	issn = {1047-840X},
+	url = {https://doi.org/10.1080/1047840X.2016.1217584},
+	doi = {10.1080/1047840X.2016.1217584},
+	pages = {341--347},
+	number = {4},
+	journaltitle = {Psychological Inquiry},
+	author = {Reicher, Stephen and Hopkins, Nick},
+	urldate = {2020-09-19},
+	date = {2016-10-01}
+}
+
+
+@article{enock_self_2018,
+	title = {Self and team prioritisation effects in perceptual matching: Evidence for a shared representation},
+	volume = {182},
+	issn = {0001-6918},
+	url = {http://www.sciencedirect.com/science/article/pii/S0001691817301518},
+	doi = {10.1016/j.actpsy.2017.11.011},
+	shorttitle = {Self and team prioritisation effects in perceptual matching},
+	abstract = {Previous research has demonstrated that in-group favouritism occurs not only in higher-level judgments such as reward allocation, but also in low-level perceptual and attentional tasks. Recently, Moradi, Sui, Hewstone, and Humphreys (2015) found a novel effect of in-group bias on a simple perceptual matching task in which football fans responded more efficiently to stimuli newly associated with their own football team than stimuli associated with rival or neutral teams. This result is consistent with a robust self-bias effect in which individuals show a large performance advantage in responding to stimuli associated with the self over stimuli associated with a close friend or a stranger (Sui, He, \& Humphreys, 2012). The present research utilised a perceptual matching paradigm to investigate the relations between self and in-group prioritisation amongst a sample of college rowers. Across two experiments, we demonstrated a reliable performance advantage for self and team stimuli. We also found a relationship between the self and team advantage in {RT}, and demonstrated an overlap in the perception of self- and team-associated shapes that was stronger in participants who reported a greater sense of group identity with their team. Further, we found no relation between the team bias and positive valence implicitly associated with the team, showing that the team bias effects are unlikely to be driven by emotional significance. The results are consistent with an overlap between self and in-group representation, which may provide evidence for a common process driving both self and in-group perceptual advantage effects.},
+	pages = {107--118},
+	journaltitle = {Acta Psychologica},
+	shortjournal = {Acta Psychologica},
+	author = {Enock, Florence and Sui, Jie and Hewstone, Miles and Humphreys, Glyn W.},
+	urldate = {2020-10-19},
+	date = {2018-01-01},
 	langid = {english},
-	note = {Number: 1
-Publisher: Nature Publishing Group},
-	file = {Full Text:/home/hcp4715/Zotero/storage/FSCZF7ZL/Carlson et al. - 2020 - Motivated misremembering of selfish decisions.pdf:application/pdf}
+	keywords = {In-group prioritisation, Self representation, Self-bias, Social attention, Social identity}
 }
